# algorithm

./: .gitignore  .gitmodules  remove_all_exe.py
binary_calc/: README.md  test.h
binary_calc/binary_mark/: bitmark.cc  bitmark.h  cases  main.cc
binary_calc/caches/: distance_new.cc  main_cache.cc  main_cache0.cc  main_no_cache.cc  stat.py  vector3d.h
file_stuff/living_wallpaper/: CMakeLists.txt  README.md  config.ini  path.cc  path.h  run.bat  schedule.bat  shellexecute.cc  upenv.cc  wallpaper.cc
file_stuff/living_wallpaper/config/: run.bat  run.vbs
huawei_real/: 1.cc  2.cc
huawei_real/must_solve/: 1_002.cc  1_003.cc  1_009.cc  1_043.cc  1_047.cc  1_048.cc  1_052.cc  1_054.cc  1_057.cc  1_093.cc  1_095.cc  1_097.cc  1_099.cc  1_100.cc  2_001.cc  2_004.cc  2_005.cc  2_006.cc  2_006_1.cc  2_008.cc  2_010.cc  2_010_1.cc  2_011.cc  2_012.cc  2_015.cc  2_015_1.cc  2_016.cc  2_019.cc  2_020.cc  2_023.cc  2_024.cc  2_025.cc  2_027.cc  2_031.cc  2_032.cc  2_033.cc  2_033_1.cc  2_034.cc  2_034_1.cc  2_037.cc  (+49 more)
identity_gen/: main.cc
interview/identity_gen/: README.md  zone.h
interview/random_shuffle/: README.md  cases  main.cc  tail_swap.cc
leetcode/: 100136.cc  100137.cc  100143.cc  100143_1.cc  100155.cc  1094.cc  131.cc  136.cc  1423.cc  1436.cc  146.cc  1466.cc  1466_1.cc  15.cc  1582.cc  1631.cc  1631_1.cc  1631_2.cc  1631_3.cc  1670.cc  198.cc  2008.cc  2048.cc  2048_1.cc  2132.cc  2132_1.cc  2276.cc  2276_1.cc  2300.case.2.cc  2300.cc  2415.cc  242.cc  242_1.cc  242_2.cc  2454.cc  2454_1.cc  2477.cc  2477_1.cc  2482.cc  2646.cc  (+33 more)
leetcode.cn/: 1038.cc  1143.cc  139.cc  207.cc  2132.cc  22.cc  264.cc  2646_1.cc  2697.cc  2960.cc  31_1.cc  416_1.cc  416_2.cc  416_3.cc  64_1.cc  715.cc  75.cc  84_1.cc  84_2.cc  common.h  qsort.cc
nowcoder.com/pc_kol_aaaxiu/: BM10.cc  BM11.cc  BM14.cc  BM16.cc  BM18.cc  BM19.cc  BM3.cc  BM4.cc  BM5.cc  BM6.cc  BM7.cc  BM8.cc  BM9.cc
nowcoder.com/sword_2_offer/: test.h
nowcoder.com/ta_huawei/: HJ1.cc  HJ11.cc  HJ12.cc  HJ19.cc  HJ22.cc  HJ24.cc  HJ25.cc  HJ27.cc  HJ5.cc  HJ8.cc  HJ9.cc  test.h
nowcoder/pc_kol_aaaxiu/: BM12.cc  BM13.cc  BM15.cc  BM17.cc  BM2.cc
sort/: bubble.cc  heap.cc  insertion.cc  merge.cc  quick.cc  selection.cc  shell.cc
(+300 files in other folders)
